--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,38 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "EcoTrack AI Backend",
   "main": "index.js",
-   "scripts": {
-    "start": "node server.js"
+  "scripts": {
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "create-admin": "node utils/createAdmin.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
+    "socket.io": "^4.8.3",
+    "winston": "^3.19.0",
+    "xss": "^1.0.15"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
